fixed overflow

--- a/scss/_custom-styles.scss
+++ b/scss/_custom-styles.scss
@@ -22,6 +22,7 @@ body {
 #search-results {
 	min-height: 80vh;
 	margin-bottom: 80px;
+	overflow: hidden;
 }
 
 #wiki-logo {
